--- a/SPAM DETECTION NLP.ipynb
+++ b/SPAM DETECTION NLP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "6fd12fdb",
    "metadata": {},
    "outputs": [
@@ -109,7 +109,7 @@
        "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "d6824222",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "5d6f21be",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e33e37c3",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "d8d28f92",
    "metadata": {},
    "outputs": [
@@ -206,7 +206,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], dtype=int64)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e12a48d3",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "ecc21b98",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "faeb17c3",
    "metadata": {},
    "outputs": [],
@@ -375,9 +375,75 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db9a1648",
+   "metadata": {},
+   "source": [
+    "# TRYING RANDOM FOREST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "7b5750f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(criterion='entropy', n_estimators=200)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# implement RandomForest Classifier\n",
+    "model = RandomForestClassifier(n_estimators=200,criterion='entropy')\n",
+    "model.fit(x_train,y_train)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "534459c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import classification_report,confusion_matrix,accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "42a0651c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACCURACY: 0.9802690582959641\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred=model.predict(x_test)\n",
+    "\n",
+    "score=accuracy_score(y_test,y_pred)\n",
+    "\n",
+    "print(\"ACCURACY:\",score)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbb42e97",
+   "id": "1a2b44b1",
    "metadata": {},
    "outputs": [],
    "source": []
